--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
-  "homepage": "/.",
   "scripts": {
+    "start": "node server.js"
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
