--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-dom": "^16.13.1",
     "react-pdf": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "serve": "^11.3.2"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "dev": "react-scripts start",
