--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "serve": "^11.3.2"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "heroku-postbuild": "npm run build"
   },
-  
+
   "eslintConfig": {
     "extends": "react-app"
   },
