--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "serve": "^11.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "heroku-postbuild": "npm run build"
   },
-
+  
   "eslintConfig": {
     "extends": "react-app"
   },
